--- a/personal-journey/css/main.css
+++ b/personal-journey/css/main.css
@@ -11,34 +11,36 @@ html,body { width: 100%; height: 100%; }
 	-webkit-transform: rotate(-90deg);
 	font-size: 170px;
 	color: #E4D9DA;
-	position:fixed;
-	top:44%;
-	left:28%;
+	position:relative;
+	padding:2px;
+	top:100%; /*this doesn't affect the title */
+	left:-27%;
 }
 .title2{
 	/* li: */
 	font-family: Baskerville;
 	font-size: 400px;
 	color: #E4D9DA;
-	position: fixed;
+	position: relative;
+	padding:2px;
 	top:23%;
-  	left: 41%;
+  	left: 35%;
 }
 .title3{
 /* family copy: */
 	font-family: Baskerville;
 	font-size: 90px;
 	color: #E4D9DA;
-	position: fixed;
-	top:58%;
-  	left: 55%;
+	position: relative;
+	top:45%;
+  	left: 35%;
 }
 .loosen{
 	font-family: Baskerville;
 	font-size: 18px;
 	color: #E4D9DA;
 	position: fixed;
-  	left: 41%;
+  	left: 35%;
   	top: 70%;
 }
 
