--- a/personal-journey/css/main.css
+++ b/personal-journey/css/main.css
@@ -7,40 +7,40 @@ html,body { width: 100%; height: 100%; }
 */
 .title{
 	font-family: Baskerville;
-	transform: rotate(-90deg);
+	transform: rotate(-90deg);color: #E4D9DA;
 	-webkit-transform: rotate(-90deg);
 	font-size: 170px;
-	color: #E4D9DA;
-	position:relative;
-	padding:2px;
-	top:100%; /*this doesn't affect the title */
-	left:-27%;
+	
+	position:fixed;
+/*	top:30%*/
+	left:28%;
+	bottom:33%;
 }
 .title2{
 	/* li: */
 	font-family: Baskerville;
 	font-size: 400px;
 	color: #E4D9DA;
-	position: relative;
+	position: fixed;
 	padding:2px;
 	top:23%;
-  	left: 35%;
+  	left: 40%;
 }
 .title3{
 /* family copy: */
 	font-family: Baskerville;
 	font-size: 90px;
 	color: #E4D9DA;
-	position: relative;
-	top:45%;
-  	left: 35%;
+	position: fixed;
+	top:58%;
+  	left: 54%;
 }
 .loosen{
 	font-family: Baskerville;
 	font-size: 18px;
 	color: #E4D9DA;
 	position: fixed;
-  	left: 35%;
+  	left: 40%;
   	top: 70%;
 }
 
@@ -51,8 +51,7 @@ html,body { width: 100%; height: 100%; }
 	-webkit-transform: rotate(90deg);
 	position:fixed;
 	top:50%;
-	left:96%;
-	margin-right:10%;
+	right:0%;
 
 }
 .nudge2{
@@ -443,7 +442,7 @@ html,body { width: 100%; height: 100%; }
 	font-family: Baskerville;
 	font-size: 80px;
 	color: #E4D9DA;
-	position:relative;
+	position:fixed;
 	left:27%;
 	top:11%;
 }
@@ -597,7 +596,7 @@ html,body { width: 100%; height: 100%; }
 	font-family: Baskerville;
 	font-size: 80px;
 	color: #E4D9DA;
-	position:relative;
+	position:fixed;
 	left:20%;
 	top:11%;
 }
@@ -605,15 +604,15 @@ html,body { width: 100%; height: 100%; }
 	font-family: Baskerville;
 	font-size: 93px;
 	color: #E4D9DA;
-	position:relative;
-	left:30%;
+	position:fixed;
+	left:28%;
 	top:16%;
 }
 .tfinal{ 
 	font-family: Baskerville;
 	font-size: 120px;
 	color: #E4D9DA;
-	position:relative;
+	position:fixed;
 	left:30%;
 	top:14%;
 }
@@ -621,7 +620,7 @@ html,body { width: 100%; height: 100%; }
 	font-family: Baskerville;
 	font-size: 140px;
 	color: #E4D9DA;
-	position:relative;
+	position:fixed;
 	left:40%;
 }
 
@@ -629,7 +628,7 @@ html,body { width: 100%; height: 100%; }
 	font-family: Baskerville;
 	font-size: 80px;
 	color: #E4D9DA;
-	position:relative;
+	position:fixed;
 	left:18%;
 	top:30%;
 }
@@ -637,7 +636,7 @@ html,body { width: 100%; height: 100%; }
 	font-family: Baskerville;
 	font-size: 93px;
 	color: #E4D9DA;
-	position:relative;
+	position:fixed;
 	left:35%;
 	top:30%;
 }
@@ -645,8 +644,8 @@ html,body { width: 100%; height: 100%; }
 	font-family: Baskerville;
 	font-size: 93px;
 	color: #E4D9DA;
-	position:relative;
-	left:35%;
+	position:fixed;
+	left:25%;
 	top:30%;
 }
 .lfinall{ 
@@ -661,9 +660,9 @@ html,body { width: 100%; height: 100%; }
 	font-family: Baskerville;
 	font-size: 120px;
 	color: #E4D9DA;
-	position:relative;
-	left:45%;
-	top:35%;
+	position:fixed;
+	left:35%;
+	top:40%;
 }
 .lfinall2{ 
 	font-family: Baskerville;
