Updated Homepage Added 2-8 Pages

--- a/click-click/css/main.css
+++ b/click-click/css/main.css
@@ -27,20 +27,21 @@ body {
 }
 .bodycontent{
 	/* One of my female fri: */
-	position:fixed;
+	position:relative;
+	display: inline-block;
 	top:8%;
-	overflow: scroll;
-	overflow-y: auto;
+/*	overflow: scroll;
+	overflow-y: auto;*/
 /*	margin:auto;*/
 	font-family: UniversLTStd;
-	font-size: 17px;
+	font-size: 21px;
 	color: black;
-/*	line-height: 37px;*/
+	line-height: 37px;
 /*	padding-top:10%;*/
 	margin-right: 25%;
 	margin-left: 26%;
 	-webkit-animation-name: move;
-    -webkit-animation-duration: 8s;
+    -webkit-animation-duration: 30s;
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-direction: bottom;
     -webkit-animation-timing-function: linear;
@@ -51,10 +52,11 @@ body {
     
     @-webkit-keyframes move {
     	0% {
-    		margin-top: -400px;
+    		margin-top: -100px;
     	}
+    	
     	100% {
-    		margin-bottom: 800px;
+    		margin-top: -1000px;
     	}
     }
 }
@@ -63,31 +65,27 @@ body {
 /*	position:fixed;*/
 	top:5%;
 	font-family: UniversLTStd;
-	font-size: 20px;
+	font-size: 24px;
 	color: black;
 	line-height: 33px;
 	padding-top:10%;
-	padding-right: 25%;
 }
 .post2{
 /*position: fixed;*/
-padding-right: 25%;
 top:54%;
 }
 
 .post3{
 /*position: fixed;*/
-padding-right: 25%;
+
 top:81%;
 }
 .post4{
 /*position: fixed;*/
-padding-right: 25%;
 top:111%;
 }
 /*.post1{
 position:fixed;
-padding-right:20%;
 top:30%;
 }*/
 
@@ -117,21 +115,79 @@ top:30%;
     }
 }*/
 .author1{
-	position:fixed;
-	top:15.5%;
+/*	position:absolute;*/
+	top:10%;
 }
 .author2{
-	position:fixed;
-	top:45%;
+	position:absolute;
+	top:5%;
 }
 .author3{
-	position:fixed;
-	top:73%;
+	position:absolute;
+	top:10.5%;
 }
 .author4{
-	position:fixed;
-	top:100%;
+	position:absolute;
+	top:16%;
 }
+.author5{
+	position:absolute;
+	top:21.5%;
+}
+.author6{
+	position:absolute;
+	top:27%;
+}
+.author7{
+	position:absolute;
+	top:31.5%;
+}
+.author8{
+	position:absolute;
+	top:37%;
+}
+.author9{
+	position:absolute;
+	top:43.4%;
+}
+.author10{
+	position:absolute;
+	top:49.5%;
+}
+.author11{
+	position:absolute;
+	top:56%;
+}
+.author12{
+	position:absolute;
+	top:61.4%;
+}
+.author13{
+	position:absolute;
+	top:66%;
+}
+.author14{
+	position:absolute;
+	top:72.4%;
+}
+.author15{
+	position:absolute;
+	top:77%;
+}
+.author16{
+	position:absolute;
+	top:82.3%;
+}
+.author17{
+	position:absolute;
+	top:88.5%;
+}
+.author18{
+	position:absolute;
+	top:94%;
+}
+
+
 
 .username{
 	/* @maglolz: */
@@ -143,21 +199,78 @@ top:30%;
 	padding-bottom:10px;
 }
 .username1{
-	position:fixed;
-	top:18.5%;
+	position:absolute;
+	top:0.4%;
 }
 .username2{
-	position:fixed;
-	top:47.5%;
+	position:absolute;
+	top:5.4%;
 }
 .username3{
-	position:fixed;
-	top:75.5%;
+	position:absolute;
+	top:10.9%;
 }
 .username4{
-	position:fixed;
-	top:105%;
+	position:absolute;
+	top:16.4%;
 }
+.username5{
+	position:absolute;
+	top:21.9%;
+}
+.username6{
+	position:absolute;
+	top:27.4%;
+}
+.username7{
+	position:absolute;
+	top:31.9%;
+}
+.username8{
+	position:absolute;
+	top:37.4%;
+}
+.username9{
+	position:absolute;
+	top:43.8%;
+}
+.username10{
+	position:absolute;
+	top:49.9%;
+}
+.username11{
+	position:absolute;
+	top:56.4%;
+}
+.username12{
+	position:absolute;
+	top:61.9%;
+}
+.username13{
+	position:absolute;
+	top:66.4%;
+}
+.username14{
+	position:absolute;
+	top:72.9%;
+}
+.username15{
+	position:absolute;
+	top:77.4%;
+}
+.username16{
+	position:absolute;
+	top:82.8%;
+}
+.username17{
+	position:absolute;
+	top:88.9%;
+}
+.username18{
+	position:absolute;
+	top:94.4%;
+}
+
 .date{
 	font-style: italic;
 	/* 16 Dec 2017: */
@@ -166,34 +279,112 @@ top:30%;
 	color: #000000;
 }
 .date1{
-	top:18%;
-	right:25%;
-	position:fixed;
+	top:0.4%;
+	right:0%;
+	position:absolute;
 }
 
 .date2{
-	top:47.5%;
-	right:25%;
-	position:fixed;
+	top:5.4%;
+	right:0%;
+	position:absolute;
 }
 .date3{
-	top:75.5%;
-	right:25%;
-	position:fixed;
+	top:10.9%;
+	right:0%;
+	position:absolute;
 }
 .date4{
-	top:105%;
-	right:25%;
-	position:fixed;
+	top:16.4%;
+	right:0%;
+	position:absolute;
 }
-hr.line1 {
+.date5{
+	top:21.9%;
+	right:1%;
+	position:absolute;
+}
+.date6{
+	top:27.4%;
+	right:1%;
+	position:absolute;
+}
+.date7{
+	top:31.9%;
+	right:1%;
+	position:absolute;
+}
+.date8{
+	top:37.4%;
+	right:1%;
+	position:absolute;
+}
+.date9{
+	top:43.8%;
+	right:1%;
+	position:absolute;
+}
+.date10{
+	top:49.9%;
+	right:1%;
+	position:absolute;
+}
+.date11{
+	top:56.4%;
+	right:1%;
+	position:absolute;
+}
+.date12{
+	top:61.4%;
+	right:1%;
+	position:absolute;
+}
+.date13{
+	top:66.5%;
+	right:1%;
+	position:absolute;
+}
+.date14{
+	top:72.9%;
+	right:1%;
+	position:absolute;
+}
+.date15{
+	top:77.4%;
+	right:1%;
+	position:absolute;
+}
+.date16{
+	top:82.8%;
+	right:1%;
+	position:absolute;
+}
+.date17{
+	top:88.9%;
+	right:1%;
+	position:absolute;
+}
+.date18{
+	top:94.4%;
+	right:1%;
+	position:absolute;
+}
+
+hr{
+	display: block;
+    height: 1px;
+    border: 0;
+    border-top: 2px solid #ccc;
+    margin: .75em 0;
+    padding-bottom:9%;
+}
+/*hr.line1 {
     display: block;
     height: 1px;
     border: 0;
     border-top: 2px solid #ccc;
-    /*margin space top bottom*/
     margin: .75em 0;
-    padding-bottom:30%;
+    padding-bottom:9%;
 
 }
 hr.line2 {
@@ -201,9 +392,8 @@ hr.line2 {
     height: 1px;
     border: 0;
     border-top: 2px solid #ccc;
-    /*margin space top bottom*/
     margin: .75em 0;
-    padding-bottom:30%;
+    padding-bottom:9%;
 
 }
 hr.line3 {
@@ -211,18 +401,27 @@ hr.line3 {
     height: 1px;
     border: 0;
     border-top: 2px solid #ccc;
-    /*margin space top bottom*/
-    margin: 2em 0;
-    padding-bottom:30%;
+    margin: .75em 0;
+    padding-bottom:9%;
 
 }
-i {
+hr.line4 {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 2px solid #ccc;
+
+    margin: .75em 0;
+    padding-bottom:9%;
+
+}*/
+/*i {
     border: solid black;
     border-width: 0 3px 3px 0;
     display: inline-block;
     padding: 10px;
 
-}
+}*/
 .up {
     transform: rotate(-135deg);
     -webkit-transform: rotate(-135deg);
@@ -242,7 +441,7 @@ i {
 	font-family: UniversLTStd;
 	font-size: 30px;
 	padding-top:20%;
-	padding-right: 19%;
+/*	padding-right: 19%;*/
 	padding-left: 20%;
 	line-height: 40px;
 	text-align: left ;
