--- a/click-click/css/main2.css
+++ b/click-click/css/main2.css
@@ -1,7 +1,7 @@
 
 html,body { width: 100%; height: 100%; }
 body {
-	margin:20px;
+	margin:20%;
 }
 
 /* Changing fonts */
@@ -19,14 +19,26 @@ body {
 	left:20px;
 	top:20px;
 }
+.arrowup{
+	transform:scale(3);
+	position:fixed;
+	left:50%;
+	top:5%;
+}
+.arrowdown{
+	transform:scale(3);
+	position:fixed;
+	left:50%;
+	bottom:5%;
+}
 
-i {
+/*i {
     border: solid black;
     border-width: 0 3px 3px 0;
     display: inline-block;
     padding: 10px;
 
-}
+}*/
 .up {
     transform: rotate(-135deg);
     -webkit-transform: rotate(-135deg);
@@ -49,8 +61,8 @@ i {
 	font-size: 30px;
 	top: 43.5%;
 	padding-right: 19%;
-	padding-left: 20%;
-	padding-bottom:20%;
+/*	padding-left: 20%;*/
+/*	padding-bottom:10%;*/
 	line-height: 40px;
 	text-align: left ;
 	color: black;
@@ -77,7 +89,8 @@ font-size: 24px;
 color: #000000;
 position: fixed;
 left:16%;
-top:33%;
+padding-left:5px;
+top:33.5%;
 }
 .usernamemainpost1{
 /* @sitlausdeo copy: */
@@ -88,6 +101,7 @@ position: fixed;
 left:30%;
 top:34%;
 }
+
 .usernamemainpost2{
 /* @sitlausdeo copy: */
 font-family: UniversLTStd;
@@ -95,7 +109,43 @@ font-size: 17px;
 color: #000000;
 position: fixed;
 left:25%;
-top:34%;
+top:34.3%;
+}
+.usernamemainpost3{
+/* @sitlausdeo copy: */
+font-family: UniversLTStd;
+font-size: 17px;
+color: #000000;
+position: fixed;
+left:30%;
+top:34.3%;
+}
+.usernamemainpost4{
+/* @sitlausdeo copy: */
+font-family: UniversLTStd;
+font-size: 17px;
+color: #000000;
+position: fixed;
+left:22%;
+top:34.3%;
+}
+.usernamemainpost5{
+/* @sitlausdeo copy: */
+font-family: UniversLTStd;
+font-size: 17px;
+color: #000000;
+position: fixed;
+left:28%;
+top:34.3%;
+}
+.usernamemainpost6{
+/* @sitlausdeo copy: */
+font-family: UniversLTStd;
+font-size: 17px;
+color: #000000;
+position: fixed;
+left:31%;
+top:34.3%;
 }
 .datemainpost1{
 /* @sitlausdeo copy: */
@@ -103,8 +153,8 @@ font-family: UniversLTStd;
 font-size: 17px;
 color: #000000;
 position: fixed;
-right:15%;
-top:34%;
+right:17%;
+top:34.3%;
 }
 
 /*.rectange{
@@ -116,13 +166,24 @@ transform: translateX(1000px);
 
 
 }*/
+.whitebox {
+	position:fixed;
+	top:45%;
+	z-index: 2;
+/*	left:30%;*/
+	background:white;
+	left:80%;
+	width: 400px;
+	height: 400px;	
+}
+
 .rectangle1 {
 	position: fixed;
-	width: 575px;
+	width: 100%;
 	height: 32px;
 	background: #616161;
 	top:51%;
-	left:38%;
+	left:35.5%;
 	transition: all 0.8s ease-in-out;
 }
 .rectangle1:hover{
@@ -131,24 +192,36 @@ transform: translateX(1000px);
 }
 .rectangle2 {
 	position: fixed;
-	width: 800px;
+	width: 100%;
 	height: 32px;
 	background: #616161;
 	top:57%;
-	left:21.5%;
+/*	left:21.5%;*/
 	transition: all 0.8s ease-in-out;
 }
 .rectangle2:hover{
 transform: translateX(1500px);
 
 }
+.rectangle01 {
+	position: fixed;
+	width: 100%;
+	height: 32px;
+	background: #616161;
+	top:57%;
+/*	left:21.5%;*/
+	transition: all 0.8s ease-in-out;
+}
+.rectangle01:hover{
+transform: translateX(1500px);
+}
 .rectangle3 {
 	position: fixed;
-	width: 800px;
+	width: 100%;
 	height: 32px;
 	background: #616161;
 	top:63%;
-	left:21.5%;
+/*	left:21.5%;*/
 	transition: all 0.8s ease-in-out;
 }
 .rectangle3:hover{
@@ -157,15 +230,95 @@ transform: translateX(1500px);
 }
 .rectangle4 {
 	position: fixed;
-	width: 430px;
+	width: 100%;
 	height: 32px;
 	background: #616161;
 	top:51%;
-	left:49%;
+	left:41%;
+	padding-right:19%;
 	transition: all 0.8s ease-in-out;
 }
 .rectangle4:hover{
-transform: translateX(1000px);
+	transform: translateX(1000px);
 
 }
+.rectangle5 {
+	position: fixed;
+	width: 100%;
+	height: 32px;
+	background: #616161;
+	top:51%;
+	transition: all 0.8s ease-in-out;
+}
+/*full length*/
+.rectangle5:hover{
+transform: translateX(1500px);
 
+}
+.rectangle6 {
+	position: fixed;
+	width: 100%;
+	height: 32px;
+	background: #616161;
+	left:25.5%;
+	top:57%;
+	transition: all 0.8s ease-in-out;
+}
+.rectangle6:hover{
+transform: translateX(1500px);
+
+}
+/*full length*/
+.rectangle7 {
+	position: fixed;
+	width: 100%;
+	height: 32px;
+	background: #616161;
+	top:57%;
+	transition: all 0.8s ease-in-out;
+}
+.rectangle7:hover{
+transform: translateX(1500px);
+
+}
+.rectangle11 {
+	position: fixed;
+	width: 100%;
+	height: 32px;
+	background: #616161;
+	top:57%;
+	left:70%;
+	margin-left:30%;
+	transition: all 0.8s ease-in-out;
+}
+.rectangle11:hover{
+transform: translateX(1500px);
+
+}
+.rectangle8 {
+	position: fixed;
+	width: 100%;
+	height: 32px;
+	background: #616161;
+	left:24.5%;
+	top:51%;
+	transition: all 0.8s ease-in-out;
+}
+.rectangle8:hover{
+transform: translateX(1500px);
+
+}
+.rectangle9 {
+	position: fixed;
+	width: 100%;
+	height: 32px;
+	background: #616161;
+	left:35.5%;
+	top:51%;
+	transition: all 0.8s ease-in-out;
+}
+.rectangle9:hover{
+transform: translateX(1500px);
+
+}
+	
