--- a/click-click/css/main.css
+++ b/click-click/css/main.css
@@ -71,7 +71,7 @@ link {
 	font-size: 24px;
 	color: black;
 	line-height: 33px;
-	padding-top:10%;
+/*	padding-top:10%;*/
 }
 .post2{
 /*position: fixed;*/
@@ -443,9 +443,9 @@ hr.line4 {
 		/* One of my female fri: */
 	font-family: UniversLTStd;
 	font-size: 30px;
-	padding-top:20%;
+	/*padding-top:20%*/;
 /*	padding-right: 19%;*/
-	padding-left: 20%;
+/*	padding-left: 20%;*/
 	line-height: 40px;
 	text-align: left ;
 	color: black;
